--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,3 @@
 # config.yml
 messages:
-  twitchNotification: "&6A streamer is live on Twitch! Go live now --> twitch.tv/{twitchUsername}"
+  twitchNotification: "[Twitch] &6A streamer is live on Twitch! Go live now --> twitch.tv/{twitchUsername}"
