Update [1.2] - Fixed the bug that did not allow the folder with the config.yml inside to be generated in the console server

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: TwitchPlugin
 version: 1.0-SNAPSHOT
 main: queryys.twitchplugin.TwitchPlugin
+config: config.yml
 commands:
   twitch:
     description: Sends a notification when a Twitch streamer goes live
